      tool and 'CMF Action' objects to categories or subcategories. To
      migrate oldstyle Actions (ActionInformation objects) you can create a
      snapshot and re-import Actions using the portal_setup tool.

    - TypesTool: TypeInformation classes are now pluggable.
      Any class registered for ITypeInformation can now be used in the
      TypesTool.

  Bug Fixes

    - CMFDefault skins: Fixed clipboard data validation.
      Split off validateClipboardData from folder_paste_control.

    - CMFDefault skins: Refactored and improved discussion_reply_form.

    - CMFDefault utils: Fixed html_marshal function.
      The return values are no longer escaped to avoid double quoting and no
      longer stringified. The page templates take care of these steps.

    - PortalFolder: Synced _verifyObjectPaste code with OFS.CopySupport.
      The behavior is almost the same as before, but the code is less tolerant
      if content types are not registered properly.

    - ActionProviderBase: getActionObject did stumble over newstyle Actions.

    - CMFCore.exportimport.content:  Ensure that BODYFILE in our "faux"
      request is a file-like object, FBO objects which expect to call its
      'read' method.

    - Got rid of the "CMF Site" and "Configured CMF Site" duality in the ZMI
      add list by removing the "CMF Site" class registration in CMFDefault
      and moving the "Configured CMF Site" registration from CMFSetup into
      CMFDefault, renaming it to "CMF Site". 
      (http://www.zope.org/Collectors/CMF/364)

    - Updated RELEASE.txt and the slurp_release script to now use Subversion
      instead of CVS, and to reflect the new tag/branch naming conventions
      used in the CMF repository.

    - Added testing framework to suppress / examine output from warnings
      module and from zLOG.

    - CMFUid/UniqueIdGeneratorTool.py: Replaced the old BTree.Length.Length
      implementation by a simple counter. Using a BTree.Length.Length object