@@ -1,16 +1,21 @@
-## Script (Python) "change_password"
+##parameters=password, confirm, domains=None, **kw
 ##title=Action to change password
-##parameters=password, confirm, domains=None
-mt = context.portal_membership
-failMessage=context.portal_registration.testPasswordValidity(password, confirm)
+##
+from Products.CMFCore.utils import getToolByName
+from Products.CMFDefault.utils import Message as _
 
-if failMessage:
-  return context.password_form(context,
-                               context.REQUEST,
-                               error=failMessage)
-member = mt.getAuthenticatedMember()
-mt.setPassword(password, domains)
-mt.credentialsChanged(password)
-return context.personalize_form(context,
-                                context.REQUEST,
-                                portal_status_message='Password changed.')
+mtool = getToolByName(script, 'portal_membership')
+rtool = getToolByName(script, 'portal_registration')
+
+result = rtool.testPasswordValidity(password, confirm)
+if result:
+    return context.setStatus(False, result)
+
+member = mtool.getAuthenticatedMember()
+mtool.setPassword(password, domains)
+if member.getProperty('last_login_time').Date() == '1999/01/01':
+    member.setProperties(last_login_time='2000/01/01')
+
+mtool.credentialsChanged(password)
+    
+return context.setStatus(True, _(u'Password changed.'))
