@@ -1,133 +1,0 @@
-<tal:block tal:condition="here/portal_skins/updateSkinCookie | nothing"
-           tal:define="dummy here/setupCurrentSkin" />
-
-<html xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      metal:use-macro="here/main_template/macros/master">
-<body>
-
-<div metal:fill-slot="main" i18n:domain="cmf_default">
-
- <div tal:define="p_props here/portal_properties;
-                  p_url here/portal_url;
-                  mtool here/portal_membership;
-                  isAnon mtool/isAnonymousUser|nothing;
-                  member mtool/getAuthenticatedMember;
-                  now here/ZopeTime;
-                  never string:2000/01/01;
-                 "
- >
-
-  <div tal:condition="isAnon">
-
-   <span tal:define="dummy python:request['RESPONSE'].expireCookie('__ac'
-                                                                  , path='/')"
-   />
-
-   <h1 class="DesktopTitle" i18n:translate="">Login failure</h1>
-
-   <p class="Desktop" i18n:translate="">You are not currently logged in. Your
-     username and or password may be incorrect. Your browser may also not be
-     configured to accept HTTP cookies. If you need help please contact
-      <a href="mailto:admin@here.com" title="Email Admin"
-         tal:attributes="href string:mailto:${p_props/email_from_address}"
-         tal:content="p_props/email_from_address"
-         i18n:name="admin_email">Email Admin</a>.
-   </p>
-  </div><!-- isAnon -->
-
-  <div tal:condition="not: isAnon"
-       tal:define="first_time python:(
-                    member.getProperty( 'login_time', None ) == never
-                                       and p_props.validate_email );
-                   dum_home mtool/createMemberArea">
-
-   <div tal:condition="first_time">
-    <div tal:define="dum_reg python:member.setProperties(
-                                                last_login_time=now,
-                                                login_time=now)" />
-
-    <h1 class="DesktopTitle" i18n:translate="">Welcome!</h1>
-
-    <p class="Desktop" i18n:translate="">
-       This is the first time that you've logged in to
-       <span tal:replace="p_props/title" i18n:name="portal_title">Here</span>.
-       Before you start exploring you need to change your original password.
-       This will ensure that the password we sent you via email cannot be
-       used in a malicious manner.</p>
-
-    <p class="Desktop" i18n:translate="">
-       Please use the form below to change your password.</p>
-
-    <form action="change_password" method="post"
-          tal:attributes="action string:${p_url}/change_password"
-    >
-     <input type="hidden" name="user" value=""
-            tal:attributes="value member" />
-     <input type="hidden" name="domains:tokens" value="" />
-     <input type="hidden" name="redirect" value=""
-            tal:attributes="value string:${p_url}/" />
-
-     <table>
-
-      <tr valign="top" align="left">
-       <th i18n:translate="">Username</th>
-       <td><span tal:replace="member">You</span></td>
-      </tr>
-
-      <tr valign="top"  align="left">
-       <th i18n:translate="">New password</th>
-       <td><input type="password" name="password" /></td>
-      </tr>
-
-      <tr valign="top"  align="left">
-       <th i18n:translate="">Confirm new password</th>
-       <td><input type="password" name="confirm" /></td>
-      </tr>
-
-      <tr>
-       <td><br /></td>
-       <td>
-        <input type="submit" value="Change password"
-               i18n:attributes="value" />
-       </td>
-      </tr>
-
-     </table>
-
-    </form>
-
-   </div><!-- first_time -->
-
-   <div tal:condition="not: first_time">
-
-    <div tal:define="d_reg python:member.setProperties(
-                                           last_login_time=member.login_time);
-                     ereg python:member.setProperties(
-                                            login_time=here.ZopeTime());
-                    " />
-
-    <div tal:condition="request/came_from | nothing ">
-      <div tal:define="came_from python:request.get('came_from');
-                       response request/RESPONSE;
-                       dredirect python: response.redirect(came_from);
-                      " />
-    </div>
-
-    <h1 class="DesktopTitle" i18n:translate="">Login success</h1>
-
-    <p class="Desktop" i18n:translate="">Welcome. You are currently logged
-      in.</p>
-
-   </div><!-- not first_time -->
-
-  </div><!-- not isAnon -->
-
- </div><!-- define p_props -->
-
-</div><!-- metal:fill-slot="main" -->
-
-</body>
-</html>
-
-
