@@ -1,0 +1,24 @@
+<html metal:use-macro="context/main_template/macros/master">
+<body>
+
+<metal:slot metal:fill-slot="header" i18n:domain="cmf_default">
+<h1 tal:content="options/title">Title</h1>
+</metal:slot>
+
+<metal:slot metal:fill-slot="main" i18n:domain="cmf_default">
+<tal:case tal:condition="options/is_anon">
+<p i18n:translate="">You are not currently logged in. Your username and or
+ password may be incorrect. Your browser may also not be configured to accept
+ HTTP cookies. If you need help please contact
+ <a href="mailto:admin@example.org" title="Email Admin"
+    tal:attributes="href string:mailto:${options/admin_email}"
+    tal:content="options/admin_email"
+    i18n:name="admin_email">admin@example.org</a>.</p>
+</tal:case>
+<tal:case tal:condition="not: options/is_anon">
+<p i18n:translate="">Welcome. You are currently logged in.</p>
+</tal:case>
+</metal:slot>
+
+</body>
+</html>
