@@ -1,56 +1,0 @@
-<html xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      metal:use-macro="here/main_template/macros/master">
-<body>
-<div metal:fill-slot="main" i18n:domain="cmf_default">
-  <div tal:define="member python: here.portal_membership.getAuthenticatedMember()">
-<div class="Desktop">
-
-<h1 i18n:translate="">Change your Password</h1>
-<div class="error"
-     tal:replace="request/error"
-     tal:condition="request/error|nothing"><hr /></div>
-
-<form action="change_password" method="post"
-      tal:attributes="action string:${here/absolute_url}/change_password"
->
-<table class="FormLayout">
- <tr>
-  <th i18n:translate="">Username</th>
-  <td><span tal:replace="member/getUserName">You</span>
-  </td>
- </tr>
- <tr>
-  <th i18n:translate="">New password</th>
-  <td><input type="password" name="password" />
-  </td>
- </tr>
- <tr>
-  <th i18n:translate="">Confirm new password</th>
-  <td><input type="password" name="confirm" />
-  </td>
- </tr>
- <tr>
-  <th i18n:translate="">Domains</th>
-  <td>
-    <input type="text" name="domains:tokens" value="" /><br />
-    <em i18n:translate="">If you do not know what this field is for, leave it
-    blank.</em>
-  </td>
- </tr>
- <tr>
-  <td><br /></td>
-  <td>
-   <input type="submit" value="Change" i18n:attributes="value" />
-  </td>
- </tr>
-</table>
-</form>
-
-</div>
-</div>
-
-</div>
-</body>
-</html>
-
