@@ -1,0 +1,57 @@
+<html metal:use-macro="context/main_template/macros/master">
+<body>
+
+<metal:slot metal:fill-slot="header" i18n:domain="cmf_default">
+<h1 tal:content="options/title">Title</h1>
+</metal:slot>
+
+<metal:slot metal:fill-slot="main" i18n:domain="cmf_default"
+   tal:define="form options/form">
+
+<tal:case tal:condition="options/is_first_login">
+<p i18n:translate="">This is the first time that you've logged in to
+ <tal:span tal:content="options/portal_title"
+    i18n:name="portal_title">Here</tal:span>.
+ Before you start exploring you need to change your original password. This
+ will ensure that the password we sent you via email cannot be used in a
+ malicious manner.</p>
+
+<p i18n:translate="">Please use the form below to change your password.</p>
+</tal:case>
+
+<form action="password_form" method="post"
+   tal:attributes="action form/action">
+<table class="FormLayout">
+ <tr>
+  <th i18n:translate="">Member ID</th>
+  <td><span tal:replace="options/member_id">You</span></td>
+ </tr>
+ <tr>
+  <th i18n:translate="">New password</th>
+  <td><input type="password" name="password" /></td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Confirm new password</th>
+  <td><input type="password" name="confirm" /></td>
+ </tr>
+ <tr>
+  <th i18n:translate="">Domains</th>
+  <td>
+   <input type="text" name="domains:tokens" value=""
+      tal:attributes="value options/domains" /><br />
+    <em i18n:translate="">If you do not know what this field is for, leave it
+    blank.</em>
+  </td>
+ </tr>
+ <tr>
+  <td>&nbsp;</td>
+  <td>
+   <metal:macro metal:use-macro="context/form_widgets/macros/buttons" />
+  </td>
+ </tr>
+</table>
+</form>
+</metal:slot>
+
+</body>
+</html>
