@@ -244,6 +244,9 @@ table.FormLayout tr td.TextField {
 }
 
 table.FormLayout th {
+    width: 72pt;
+    padding-right: 8pt;
+    vertical-align: top;
     text-align: right;
     font-size: 80%;
     font-weight: bold;
